janet-lsp-plus/tests/snapshots/lsp__signature_help_at_the_second_argument.snap
---
source: server/tests/lsp.rs
expression: "format!(\"----- CURSOR\\n{}\\n\\n----- SIGNATURE\\n{}\\nactive parameter: {}\\n\",\nsession.cursor(\"(string/join lines \\\"\", 19),\nsignature[\"label\"].as_str().unwrap(), signature[\"activeParameter\"])"
---
----- CURSOR
    (string/join lines "\n")))
                       ↑

----- SIGNATURE
(string/join parts: (or :tuple :array) &opt sep: (or :string :buffer :symbol :keyword)) -> :string
active parameter: 1
