janet-lsp-plus/tests/snapshots/lsp__signature_help_for_a_local_holding_a_function.snap
---
source: server/tests/lsp.rs
expression: "format!(\"----- SOURCE CODE\\n{source}\\n----- SIGNATURE\\n{label}\\n\")"
---
----- SOURCE CODE
(import ./shapes)

(defn plot []
  (let [make shapes/circle]
    (make 1)))

----- SIGNATURE
(make :number) -> Circle
