janet-lsp-plus/tests/snapshots/lsp__signature_help_instantiates_the_parameters_of_a_core_call.snap
---
source: janet-lsp-plus/tests/lsp.rs
expression: "format!(\"----- CALL\\n(map | [1 2 3])\\n\\n----- SIGNATURE\\n{}\\n\",\nhelp[\"signatures\"][0][\"label\"].as_str().unwrap())"
---
----- CALL
(map | [1 2 3])

----- SIGNATURE
(map f: (fn [:number] b) x: (or [:number] @[:number]) & xs: (or [:any] @[:any])) -> @[b]
