janet-lsp-plus/tests/snapshots/lsp__types_report_nothing_until_they_are_asked_to.snap
---
source: janet-lsp-plus/tests/lsp.rs
expression: "published(&mut session, &scratch)"
---
janet 1 191: unknown symbol no-such-function
