janet-lsp-plus/tests/snapshots/lsp__workspace_symbol_matches_by_substring.snap
---
source: janet-lsp-plus/tests/lsp.rs
expression: "shown.join(\"\\n\")"
---
area src/shapes.janet 29:6-29:10
total-area src/report.janet 4:6-4:16
